After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762117 - avidemux: Fix string memory leak
avidemux: Fix string memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.6.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
1.6.4
Depends on:
Blocks:
 
 
Reported: 2016-02-16 00:03 UTC by Vineeth
Modified: 2016-04-14 17:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix string memory leak (854 bytes, patch)
2016-02-16 00:04 UTC, Vineeth
committed Details | Review

Description Vineeth 2016-02-16 00:03:37 UTC
==27271== 161 bytes in 7 blocks are definitely lost in loss record 4,193 of 4,339
==27271==    at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so)
==27271==    by 0x425BBE2: g_malloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==27271==    by 0x4273E1C: g_strdup (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==27271==    by 0x50CA67B: gst_riff_create_video_caps (riff-media.c:923)
==27271==    by 0x50AF2E0: gst_avi_demux_parse_stream (gstavidemux.c:2284)
==27271==    by 0x50BA940: gst_avi_demux_loop (gstavidemux.c:4041)
==27271==    by 0x4119EB8: gst_task_func (gsttask.c:331)
==27271==    by 0x411B05E: default_func (gsttaskpool.c:68)
==27271==    by 0x427D404: ??? (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==27271==    by 0x427C9A9: ??? (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==27271==    by 0x4321F6F: start_thread (pthread_create.c:312)
==27271==    by 0x4423BED: clone (clone.S:129)
Comment 1 Vineeth 2016-02-16 00:04:35 UTC
Created attachment 321330 [details] [review]
fix string memory leak
Comment 2 Tim-Philipp Müller 2016-02-16 11:45:26 UTC
Thanks for the patch!

commit dc70bfd36a8851eb42010773165ad8b7f7f19d49
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Tue Feb 16 09:02:30 2016 +0900

    avidemux: Fix string memory leak
    
    codec_name is not being freed in all conditions leading to memory leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=762117