gst/avi/gstavidemux.c
@@ -2452,9 +2452,8 @@ gst_avi_demux_parse_stream (GstAviDemux * avi, GstBuffer * buf)
 
     gst_tag_list_add (stream->taglist, GST_TAG_MERGE_APPEND, tag_name,
         codec_name, NULL);
-    g_free (codec_name);
   }
-
+  g_free (codec_name);
   gst_buffer_unref (buf);
 
   return TRUE;
